--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -8,16 +8,18 @@ body{
 .title{
     position: inherit;
     margin-top: -14em;
+    font-size: 1.4em;
     text-align: center;
     width:50%;
-    margin-left:25%;
+    margin-left:26%;
     
 }
 .subtitle{
     position: inherit;
-    font-size: 1.4em;
+    font-size: 1.1em;
     text-align: center;
     width:95%;
+    margin-left: 4%;
 }
 
 
@@ -92,4 +94,12 @@ body{
       background: #FFE1A1;
   }
  
+}
+@media only screen and (min-width: 1280px) {
+    
+    .search{
+        margin-left:-25%;
+        width:700px
+    }
+
 }
