--- a/src/components/moreinfo/moreinfo.css
+++ b/src/components/moreinfo/moreinfo.css
@@ -7,6 +7,13 @@
 .safety{
     margin-left: 3% ;
 }
+.items p{
+    font-size: 0.7em;
+    color:rgb(170, 170, 170)
+}
+.items h1{
+    font-size: 1.4em;
+}
 
 .hygene{
     margin:-2% 0 0 3%;
@@ -60,7 +67,4 @@
     .art{
         margin-left:10%
     }
-}
-@media only screen and (min-width: 1024px) {
-   
 }
