--- a/src/components/QuickSearches/quick.css
+++ b/src/components/QuickSearches/quick.css
@@ -1,5 +1,6 @@
 .quick{
     text-align: center;
+ 
 }
 .needsText{
     margin-top: 10%;
@@ -22,6 +23,9 @@
 }
 .bevarage{
     padding-top:10%;
+}
+.explore{
+    margin-left: 5%;
 }
 
 
